[gd_scene load_steps=7 format=2]

[ext_resource path="res://World_Selection/Interface/SettingsPage.gd" type="Script" id=1]
[ext_resource path="res://Leaderboard/close button.png" type="Texture" id=2]
[ext_resource path="res://Login/Resources/background.jpg" type="Texture" id=3]
[ext_resource path="res://World_Selection/Interface/Help.png" type="Texture" id=4]
[ext_resource path="res://World_Selection/Interface/Audio.png" type="Texture" id=5]
[ext_resource path="res://World_Selection/Interface/Quit.png" type="Texture" id=6]

[node name="SettingsScreen" type="Node2D"]
scale = Vector2( 2.5, 2.5 )

[node name="Settings" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="Settings"]
position = Vector2( 203.398, 124.022 )
scale = Vector2( 0.372131, 0.404022 )
texture = ExtResource( 3 )

[node name="Help_Button" type="Button" parent="Settings"]
margin_left = 99.9355
margin_top = 94.0468
margin_right = 153.936
margin_bottom = 147.047
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Settings/Help_Button"]
position = Vector2( 26.457, 25.2993 )
scale = Vector2( 0.125158, 0.125158 )
texture = ExtResource( 4 )

[node name="Audio_Button" type="Button" parent="Settings"]
margin_left = 182.0
margin_top = 94.0
margin_right = 241.0
margin_bottom = 148.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Settings/Audio_Button"]
position = Vector2( 29.7181, 27.5136 )
scale = Vector2( 0.108496, 0.101232 )
texture = ExtResource( 5 )

[node name="Quit_Button" type="Button" parent="Settings"]
margin_left = 270.0
margin_top = 94.0
margin_right = 324.0
margin_bottom = 148.0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Settings/Quit_Button"]
position = Vector2( 26.6641, 26.8657 )
scale = Vector2( 0.103931, 0.103931 )
texture = ExtResource( 6 )

[node name="Close_Button" type="TextureButton" parent="Settings"]
margin_left = 13.5563
margin_top = 6.11861
margin_right = 50.5563
margin_bottom = 43.1186
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
